# imap

./: .gitignore  Cargo.toml  README.md
.github/workflows/: config.yml
src/: client.rs  lib.rs  read.rs  read_tests.rs  response.rs  response_tests.rs
src/commands/: list.rs  login.rs  mod.rs  select.rs
src/responses/: list.rs  login.rs  mod.rs  select.rs
