[package]
name = "imap-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
test = false

[dependencies]
smol = "*"
async-native-tls = "0.4"
async-recursion = "1.0.0"
async-trait = "0.1.56"
futures-lite = "1.12.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

# async-graphql = "4.0.1"
# async-graphql-tide = "4.0.1"

# regex = "*"
# mail-parser = "0.4.8"
# scraper = "0.13.0"